--- a/kolam.html
+++ b/kolam.html
@@ -27,10 +27,10 @@
     </nav>
     <div class="cluster-map" id="outer"> 
         <div id="clusters">
-            <a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_12.html"></a><a href="./cluster_1.html"></a><a href="./cluster_9.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_8.html"></a><a href="./cluster_3.html"></a><a href="./cluster_2.html"></a><p id="instructions-clusters"><span>Select a Cluster to explore its individual photographs.</span></p><a href="./cluster_7.html"></a><a href="./cluster_6.html"></a><a href="./cluster_4.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_11.html"></a><a href="./cluster_5.html"></a><a href="./cluster_10.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a>
+            <a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_12.html"></a><a href="./cluster_1.html"></a><a href="./cluster_9.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_8.html"></a><a href="./cluster_3.html"></a><a href="./cluster_2.html"></a><p id="instructions-clusters"><span>Select a cluster to explore its individual photographs.</span></p><a href="./cluster_7.html"></a><a href="./cluster_6.html"></a><a href="./cluster_4.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_11.html"></a><a href="./cluster_5.html"></a><a href="./cluster_10.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a>
         </div>
         <div id="clusters-mobile">
-            <p id="instructions-clusters">Select a Cluster to explore its individual photographs.</p>
+            <p id="instructions-clusters">Select a cluster to explore its individual photographs.</p>
             <a href="./cluster_1.html"><img src="./assets/1/averaged.png" alt=""></a>
             <a href="./cluster_9.html"><img src="./assets/2/averaged.png" alt=""></a>
             <a href="./cluster_3.html"><img src="./assets/3/averaged.png" alt=""></a>
