--- a/about.html
+++ b/about.html
@@ -32,10 +32,15 @@
             <p>
             A·kin takes artist Aarati Akkapeddi’s family photo album as its starting point. Akkapeddi combines these personal photographs, from the south Indian state Tamil Nadu, with images from the <a href="https://stars.hypotheses.org/">Studies in Tamil Studio Archives and Society Archive</a> (stars.archive), a collection that investigates the history of South Indian studio photography between the 1880s and the 1980s.
             </p>
-            <p>The work takes the shape of a Kolam where patterns are traditionally drawn with rice flour by women on their home entrance to welcome all but the evil spirits. In this case, the kolam –similarly installed at The Photographers’ Gallery Archive Display¬– is formed by groupings of photographs organised on a grid by an image classification algorithm, and assembled on clusters by Akkapeddi’s own artistic intervention. The technical details and problematic possibilities of algorithmic categorisation that lay at the core of the project are shared <a href='./categorisation.html'>here</a></p>
-            <p>Each group in the kolam is represented by a central image, a composite averaging all of the images within the cluster. This website invites visitors to pull apart the composites and learn about the source and cultural insights of each photograph. </p>
-            <p>An accompanying <a href="./video.html">video</a> includes oral interviews with family members reflecting on the diasporic identity. Stars.archive researchers also share insights on the particularities of eastern studio archives and family albums in relation to a more western view.</p>
-            <p>We invite you to <a style="margin-top:0;" href="mailto:aarati.akkapeddi@gmail.com">get in touch</a> to share additional information, send any question or request the removal of images of loved ones.
+            <p>
+                The work takes the shape of a ‘kolam’ where patterns are traditionally drawn with rice flour by women on their home entrance to welcome all but the evil spirits. In this case, the kolam –similarly installed at The Photographers’ Gallery Archive Display– is formed by groupings of photographs organised on a grid by an image classification algorithm, and assembled on clusters by Akkapeddi’s own artistic intervention. The technical details and problematic possibilities of algorithmic categorisation that lay at the core of the project are shared <a href='./categorisation.html'>here.</a>
+            </p>
+
+            <p>Each group in the kolam is represented by a central image, a composite averaging all of the images within the cluster. This website invites visitors to pull apart the composites and learn about the source and cultural insights of each photograph.
+            An accompanying <a href="./video.html">video</a> includes oral interviews with family members reflecting on their diasporic identity. stars.archive researchers also share insights on the particularities of eastern studio archives and family albums in relation to a more western view.
+            </p>
+            <p>
+                We invite you to <a style="margin-top:0;" href="mailto:aarati.akkapeddi@gmail.com">get in touch</a> to share additional information, send any questions or request the removal of images of loved ones.
             </p>
             <br>
         </div>
