--- a/credits.html
+++ b/credits.html
@@ -28,17 +28,17 @@
     <div id="outer">
         <div class="intro">
             <br>
-            <p>We invite you to <a style="margin-top:0;" href="mailto:aarati.akkapeddi@gmail.com">get in touch</a> to share additional information, send any question or request the removal of images of loved ones.
-            </p>
-            <p>A list of all the photography studios can be found <a style="margin-top:0;" href="/studios.html">here</a>.</p>
-            <p><em>A·kin is a project by <a href='https://aarati.online'>Aarati Akkapeddi</a> in collaboration with <a href='https://stars.hypotheses.org/'>stars.archive</a>, and commissioned by <a href='https://thephotographersgallery.org.uk/'>The Photographers’ Gallery.</a></em>
-            </p>
-            <p>Neuronal Network Model: <a href="https://arxiv.org/abs/1409.1556">VGG-16</a> by Karen Simonyan and Andrew Zisserman at the University of Oxford.
-                <br>Risograph Printing: <a href="https://earthbound.press/">Earthbound Press</a>
+            <p>A·kin is a project using photography, video, machine vision and website development by <a href='https://aarati.online'>Aarati Akkapeddi</a> in collaboration with <a href='https://stars.hypotheses.org/'>stars.archive</a>, commissioned by <a href='https://thephotographersgallery.org.uk/'>The Photographers’ Gallery.</a></p>
 
-            </p>
+            <p>We invite you to <a style="margin-top:0;" href="mailto:aarati.akkapeddi@gmail.com">get in touch</a> to share additional information, send any questions or request the removal of images of loved ones. </p>
+
+            <p>Neuronal Network Model: <a href="https://arxiv.org/abs/1409.1556">VGG-16</a> by Karen Simonyan and Andrew Zisserman at the University of Oxford.</p>
+
+            <p>Risograph Printing: <a href="https://earthbound.press/">Earthbound Press</a></p>
+
             <p>Thank you to interviewees Suseela Ramavarapu, Seetharam Ramavarapu, Sreenivas Ramavarapu, Sudha Akkapeddi, and Zoé Headley.</p>
-            <p>Featured Tamil photography studios:<br>
+
+            <p>Featured Tamil photography studios:</p>
                 <ul>
                     <li>Guhan Studio, Adyar, Chennai</li>
                     <li>Bhaskar Photo Studio, Vizianagram -- Andhra *(Akkapeddi’s family is Telugu so a few family photos were taken in the neighboring state of Andhra Pradesh rather than Tamil Nadu)</li>
