fix glitch on image kolam

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             let tsnes = document.querySelectorAll('.tsne');
             document.querySelector("#clusters").style.backgroundImage = 'url("assets/finalized.jpg")';
 
-                document.getElementById("instructions-clusters").innerHTML = "<span>Select a Cluster to explore its individual photographs.</span>";
+                document.getElementById("instructions-clusters").innerHTML = "<span>Select a cluster to explore its individual photographs.</span>";
         })
        }
        document.querySelector("#modal").addEventListener("click",function(){
