--- a/categorisation.html
+++ b/categorisation.html
@@ -1240,9 +1240,12 @@ is:
 
 
     </div>
-    <div id="grid">
+    <div id="grid-wrapper">
+        <div id="grid">
 
+        </div>
     </div>
+    
     <script src="tsne.js"></script>
     <script>
         document.querySelector("#mobile-nav-trigger").addEventListener("click", function(){
