--- a/cluster_1.html
+++ b/cluster_1.html
@@ -26,7 +26,7 @@
     </nav>
 
 
-    <div id="outer">
+    <div class="clust" id="outer">
     <p id="instructions">
         <span id="desktop-only">Click and drag a layer to view its provenance.</span><span id="mobile-only">Tap and hold a layer to view it's provenance. Tap again to move past the layer.</span><br>
         <a href="./cluster_1.html">Click here to reset→</a>             
