--- a/cluster_9.html
+++ b/cluster_9.html
@@ -26,7 +26,7 @@
         <a href="./categorisation.html">Categorisation</a>
         <a href="./credits.html">Credits</a>
     </nav>
-    <div id="outer">
+    <div class="clust" id="outer">
     <p id="instructions">
         <span id="desktop-only">Click and drag a layer to view its provenance.</span><span id="mobile-only">Tap and hold a layer to view it's provenance. Tap again to move past the layer.</span><br>
         <a href="./cluster_2.html">Click here to reset→</a>             
