--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav id="desktop-nav">
-        <a href="./kolam.html"><img class='kolam' src="./kolam.svg"></a>
+        <a href="./kolam.html"><img class='kolam' src="./kolam.svg"><span>Clusters</span></a>
         <a href="./about.html">About</a>
         <a href="./video.html">Video</a>
         <a href="./categorisation.html">Categorisation</a>
@@ -20,7 +20,7 @@
     </nav>
     <img id="mobile-nav-trigger" class='kolam' src="./kolam.svg">
     <nav id="mobile-nav">
-        <a href="./kolam.html">Home</a>
+        <a href="./kolam.html">Home (Clusters)</a>
         <a href="./about.html">About</a>
         <a href="./video.html">Video</a>
         <a href="./categorisation.html">Categorisation</a>
