--- a/cluster_12.html
+++ b/cluster_12.html
@@ -12,7 +12,7 @@
 <body id="twelve">
     <div id="loader" class="on"><p>loading...</p></div>
     <nav id="desktop-nav">
-        <a href="./kolam.html"><img class='kolam' src="./kolam.svg"></a>
+        <a href="./kolam.html"><img class='kolam' src="./kolam.svg"><span>Clusters</span></a>
         <a href="./about.html">About</a>
         <a href="./video.html">Video</a>
         <a href="./categorisation.html">Categorisation</a>
@@ -20,7 +20,7 @@
     </nav>
     <img id="mobile-nav-trigger" class='kolam' src="./kolam.svg">
     <nav id="mobile-nav">
-        <a href="./kolam.html">Home</a>
+        <a href="./kolam.html">Home (Clusters)</a>
         <a href="./about.html">About</a>
         <a href="./video.html">Video</a>
         <a href="./categorisation.html">Categorisation</a>
@@ -28,7 +28,7 @@
     </nav>
     <div class="clust" id="outer">
     <p id="instructions">
-        <span id="desktop-only">Click and drag a layer to view its provenance.</span><span id="mobile-only">Tap and hold a layer to view it's provenance. Tap again to move past the layer.</span><br>
+        <span id="desktop-only">Click and hold a layer to view its provenance.</span><span id="mobile-only">Tap and hold a layer to view it's provenance. Tap again to move past the layer.</span><br>
         <a href="./cluster_12.html">Click here to reset→</a>             
     </p>
     <div id="inner">
