--- a/credits.html
+++ b/credits.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav id="desktop-nav">
-        <a href="./kolam.html"><img class='kolam' src="./kolam.svg"></a>
+        <a href="./kolam.html"><img class='kolam' src="./kolam.svg"><span>Clusters</span></a>
         <a href="./about.html">About</a>
         <a href="./video.html">Video</a>
         <a href="./categorisation.html">Categorisation</a>
@@ -19,7 +19,7 @@
     </nav>
     <img id="mobile-nav-trigger" class='kolam' src="./kolam.svg">
     <nav id="mobile-nav">
-        <a href="./kolam.html">Home</a>
+        <a href="./kolam.html">Home (Clusters)</a>
         <a href="./about.html">About</a>
         <a href="./video.html">Video</a>
         <a href="./categorisation.html">Categorisation</a>
