update instruction text

--- a/cluster_11.html
+++ b/cluster_11.html
@@ -29,7 +29,7 @@
     </nav>
     <div class="clust" id="outer">
     <p id="instructions">
-        <span id="desktop-only">Click and hold a layer to view its provenance.</span><span id="mobile-only">Tap and hold a layer to view it's provenance. Tap again to move past the layer.</span><br>
+        <span id="desktop-only">Click a layer to view its provenance. Click again to move past the layer.</span><span id="mobile-only">Tap and hold a layer to view it's provenance. Tap again to move past the layer.</span><br>
         <a href="./cluster_11.html">Click here to reset→</a>             
     </p>
     <div id="inner">
